<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ardagv</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="runner@todo.todo">runner</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
 
  <!-- Sim components: -->
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros2_control</depend>

  <!-- Our components: -->
  <depend>ardagv_crsf</depend>
  <depend>imu_ros2</depend>
  <depend>adi_3dtof_adtf31xx</depend>
  <depend>ardagv_motors</depend>

  <!-- 3rd party components: -->
  <depend>canopen_ros2_control</depend>
  <depend>diff_drive_controller</depend>
  <depend>forward_command_controller</depend>
  <depend>controller_manager</depend>
  <depend>xacro</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>twist_mux</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
