<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ardagv_crsf</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="runner@todo.todo">runner</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>canopen_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
